<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:background="@drawable/background_login"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="128sp"
            android:layout_marginBottom="64sp"
            android:src="@drawable/logo_login"/>

        <TextView
            android:text="@string/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="64sp"/>

        <EditText
            android:id="@+id/ma_username"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"/>

        <EditText
            android:id="@+id/ma_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/ma_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16sp"
            android:background="@drawable/select_tab2"/>

        <TextView
            android:id="@+id/ma_forget"
            android:text="@string/forget"
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16sp"
            android:layout_marginBottom="32sp"/>

    </LinearLayout>

</ScrollView>
