<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.tridaya.tridayago.NavigationDrawerFragment">

    <LinearLayout
        android:id="@+id/profilZone"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:background="@drawable/drawer"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/profilImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"
                android:src="@drawable/splash"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/profilName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_username"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/profilId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/profilJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkin"
                android:textSize="12sp"
                android:textColor="@color/silver"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/profilCheckDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/profilCheckTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/drawerListItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:divider="@color/silver"
        android:dividerHeight="1dp"
        android:background="@color/white"  />

</LinearLayout>
