<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tridaya.tridayago.TaskReportActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/tda_Image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/splash"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/tda_Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tda_Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tda_Role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tdp_checkins"
                    android:textStyle="bold"/>
                    -->

                <TextView
                    android:id="@+id/tda_Checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tdp_checkins"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/tda_Job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/tda_JobDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="5dp">

            <GridView
                android:id="@+id/tda_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="120dp"
                android:numColumns="3"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center">

            </GridView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/tdp_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:hint="@string/tdp_note"
                android:gravity="top"
                android:padding="10dp"
                android:background="@drawable/taskdetailedittextbg"/>

            <Button
                android:id="@+id/tda_send"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@drawable/select_tab2"
                android:text="@string/tdp_send"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
