<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tridaya.tridayago.DetailTaskActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/tda_Image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/splash"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tda_Clientname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tda_ClientId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tda_Category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/taskTitle"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/action_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/taskClock"
                android:textColor="@color/silver"
                android:text="@string/action_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v4.view.ViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="15dp"
                android:paddingTop="3dp"/>

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-25dp"
                android:gravity="bottom"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="#00FF00"
                app:pageColor="#FFFFFF"
                app:snap="false" />


            <TextView
                android:id="@+id/taskNotes"
                android:textColor="@color/silver"
                android:text="@string/example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/taskButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/report"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/select_tab2"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>