<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/itemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/green"
                    style="@style/Base.TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/itemLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/gray"
                    style="@style/Base.TextAppearance.AppCompat.Body2"/>

            </LinearLayout>

            <TextView
                android:id="@+id/itemClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/green"
                style="@style/Base.TextAppearance.AppCompat.Body2"/>

            <ImageView
                android:id="@+id/itemPicture"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_taskdone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <GridView
                android:id="@+id/itemhfrd_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:numColumns="3"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center">

            </GridView>

        </LinearLayout>

        <TextView
            android:id="@+id/itemnotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>